--- a/res/layout/activity_choose_opponent.xml
+++ b/res/layout/activity_choose_opponent.xml
@@ -7,10 +7,16 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="women.hackathon.challengeme.ChooseOpponent" >
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
+    
+     <ImageButton
+            android:id="@+id/ImageButton_challenge_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="14dp"
+            android:background="@drawable/challenge_button"
+            android:onClick="onChallengeButtonClick"
+            android:src="@drawable/challenge_button" />
 
 </RelativeLayout>
