--- a/res/menu/my_trophy_room.xml
+++ b/res/menu/my_trophy_room.xml
@@ -1,6 +1,6 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="women.hackathon.challengeme.ChallengeNotificationScreen" >
+    tools:context="women.hackathon.challengeme.MyTrophyRoom" >
 
     <item
         android:id="@+id/action_settings"
