Added the core logic of the app
Timer and date dialogs added.

--- a/res/layout/activity_main_screen.xml
+++ b/res/layout/activity_main_screen.xml
@@ -14,8 +14,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginBottom="56dp"
+            android:layout_toRightOf="@+id/ImageButton_ready_status_no"
             android:background="@drawable/profile_button"
             android:onClick="onProfileClick"
             android:src="@drawable/profile_button" />
@@ -24,9 +23,9 @@
             android:id="@+id/ImageButton_ready_status_no"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_alignTop="@+id/ImageButton_ready_status_yes"
-            android:layout_marginRight="30dp"
+            android:layout_above="@+id/ImageButton_profile"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="57dp"
             android:background="@drawable/no_button"
             android:onClick="onNoButtonClick"
             android:src="@drawable/no_button" />
@@ -35,10 +34,9 @@
             android:id="@+id/ImageButton_ready_status_yes"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_above="@+id/ImageButton_profile"
-            android:layout_marginBottom="48dp"
-            android:layout_marginRight="24dp"
-            android:layout_toLeftOf="@+id/ImageButton_ready_status_no"
+            android:layout_above="@+id/ImageButton_ready_status_no"
+            android:layout_marginBottom="14dp"
+            android:layout_toLeftOf="@+id/ImageButton_profile"
             android:background="@drawable/yes_button"
             android:onClick="onYesButtonClick"
             android:src="@drawable/yes_button" />
